--- a/src/app/events/details/details.component.css
+++ b/src/app/events/details/details.component.css
@@ -20,3 +20,10 @@
 .success{
   color: aqua;
 }
+
+.button {
+  background: #e91e63 !important;
+  margin: auto;
+  font-size: larger;
+  font-weight: bolder;
+}
