--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,1 +1,34 @@
-<pre>{{user | json}}</pre>
+<ng-container *ngTemplateOutlet="user ? yes : no"></ng-container>
+<ng-template #yes>
+  <section>
+    <div class="container" fxLayout="row" fxLayout.xs="column" fxFlexFill fxLayoutAlign="center center">
+      <div fxFlex="50" class="form-container">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
+            <mat-card-subtitle>{{user.createdAt | date:'dd.MM.YYYY HH:SS'}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <p>Отпуск: {{user.vacationDays}}</p>
+            <p>Администратор: {{user.isAdmin| yesNo}}</p>
+            <p>Началник: {{user.isLead | yesNo}}</p>
+            <p>Позиция: {{user.jobTitle.title}}</p>
+            <div>
+              Отпуски:
+              <div *ngFor="let vacantion of user.VacationDetails">
+                <p>Период: {{vacantion.from | date:'dd-MM-yy'}} - {{vacantion.to | date:'dd-MM-yy'}} Статус: {{vacantion.status}}</p>
+                <p></p>
+              </div>
+            </div>
+
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </section>
+</ng-template>
+<ng-template #no>
+  <app-loading-dialog></app-loading-dialog>
+</ng-template>
